@@ -1,1 +1,1 @@
-wanpipe-7.0.5
+wanpipe-7.0.6
